Fixed showseat update

--- a/OnlineMovieBooking/Views/ShowSeats/Index.cshtml
+++ b/OnlineMovieBooking/Views/ShowSeats/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Show.ShowId)
+            @Html.DisplayNameFor(model => model.ShowId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Status)
@@ -23,7 +23,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Show.ShowId)
+            @Html.DisplayFor(modelItem => item.ShowId)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Status)
