--- a/OnlineMovieBooking/Views/Shared/_Layout.cshtml
+++ b/OnlineMovieBooking/Views/Shared/_Layout.cshtml
@@ -15,17 +15,18 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    @if (User.Identity.IsAuthenticated)
+                    @if (User.Identity.IsAuthenticated && User.Identity.Name == "admin")
+                    {
+                        <li>@Html.ActionLink("SignOut", "SignOut", "UserLogin")</li>
+                        <li><span class="navbar-text font-weight-bold ">Welcome @User.Identity.Name !</span></li>
+
+                    }
+                    else if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         <li>@Html.ActionLink("SignOut", "SignOut")</li>
-                        <li><span class="navbar-text font-weight-bold ">Welcome @User.Identity.Name !</span></li>
-                    }
-                    else if (User.Identity.Name == "admin")
-                    {
-                        <li>@Html.ActionLink("SignOut", "SignOut", "UserLogin")</li>
                         <li><span class="navbar-text font-weight-bold ">Welcome @User.Identity.Name !</span></li>
                     }
                     else
