--- a/OnlineMovieBooking/Views/UserMovieSelection/GetNonReserved.cshtml
+++ b/OnlineMovieBooking/Views/UserMovieSelection/GetNonReserved.cshtml
@@ -38,8 +38,9 @@
                 @Html.DisplayFor(modelItem => item.ShowId)
             </td>
             <td>
-                @Html.ActionLink("select", "SelectSeat", new { id = item.ShowSeatId })
+                @Html.ActionLink("Select", "SelectSeat", new { id = item.ShowSeatId })
             </td>
+
         </tr>
     }
 
