--- a/OnlineMovieBooking/Views/UserMovieSelection/SelectSeat.cshtml
+++ b/OnlineMovieBooking/Views/UserMovieSelection/SelectSeat.cshtml
@@ -7,43 +7,23 @@
 
 <h2>SelectSeat</h2>
 
-@using (Html.BeginForm())
+using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ShowSeatId)
-        </th>
+@Html.AntiForgeryToken()
 
-        <th>
-            @Html.DisplayNameFor(model => model.ShowId)
-        </th>
-    <tr>
-        <td>
-            @Html.DisplayFor(model=> model.ShowSeatId)
-        </td>
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.ShowSeatId)
 
-        <td>
-            @Html.DisplayFor(model => model.ShowId)
-        </td>
-        </tr>
-    </table>
-
-
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.CheckBoxFor(model => model.Status)
-                    @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.Status)
+            @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
         </div>
-
+    </div>
+    </div>
 
 
     <div class="form-group">
@@ -52,8 +32,8 @@
         </div>
     </div>
 
-}
+    }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
