solved seat selection

--- a/OnlineMovieBooking/Views/Movie/Index.cshtml
+++ b/OnlineMovieBooking/Views/Movie/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@model IEnumerable<OnlineMovieBooking.ViewModels.MovieViewModel>
 
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_MovieLayout.cshtml";
+    ViewBag.Title = "Movies";
 }
 
 <h2>Index</h2>
