--- a/OnlineMovieBooking/Views/Shared/_MovieLayout.cshtml
+++ b/OnlineMovieBooking/Views/Shared/_MovieLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "_MovieLayout";
+    ViewBag.Title = "MovieBox";
 }
 
 <!DOCTYPE html>
@@ -121,10 +121,8 @@
             <option value="">H</option>
             <option value="">I</option>
         </select>
-        <% using(Html.BeginForm("actionName", "controllerName")) { %>
-        <input class="button-signin button-signin1" type="submit" value="Sign Out" />
-        <% } %>
-        
+        <span class="button-signin button-signin1">@Html.ActionLink("SignOut", "SignOut", "UserLogin")</span>
+
         <button class="button-profile "><i class='far fa-user-circle button-icon button-profile1'></i></button>
     </header>
     <nav>
