--- a/OnlineMovieBooking/Views/Users/Details.cshtml
+++ b/OnlineMovieBooking/Views/Users/Details.cshtml
@@ -3,6 +3,16 @@
 @{
     ViewBag.Title = "Details";
 }
+<script>
+    function show() {
+        var x = document.getElementById("pass");
+        if (x.style.display === "none") {
+            x.style.display = "block";
+        } else {
+            x.style.display = "none";
+        }
+    }
+</script>
 @Html.Partial("PartialAdminPanel")
 <h2>User Details - @Model.Username</h2>
 
@@ -46,7 +56,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Password)
+            <span style="display: none" id="pass">@Model.Password</span>
+            <input type="checkbox" onclick="show()" /> Show Password
         </dd>
 
     </dl>
