--- a/OnlineMovieBooking/Views/UserMovieSelection/SelectSeat.cshtml
+++ b/OnlineMovieBooking/Views/UserMovieSelection/SelectSeat.cshtml
@@ -19,7 +19,7 @@ using (Html.BeginForm())
     <div class="form-group">
         @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DisplayFor(model => model.Status)
+            @Html.EditorFor(model => model.Status)
             @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
         </div>
     </div>
