--- a/OnlineMovieBooking/Views/UserMovieSelection/SelectSeat.cshtml
+++ b/OnlineMovieBooking/Views/UserMovieSelection/SelectSeat.cshtml
@@ -7,7 +7,7 @@
 
 <h2>SelectSeat</h2>
 
-using (Html.BeginForm())
+@using (Html.BeginForm())
 {
 @Html.AntiForgeryToken()
 
@@ -19,7 +19,7 @@ using (Html.BeginForm())
     <div class="form-group">
         @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DisplayFor(model => model.Status)
+            @Html.CheckBoxFor(model => model.Status)
             @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
         </div>
     </div>
