movieinfo image fixed

--- a/OnlineMovieBooking/Views/Movie/Details.cshtml
+++ b/OnlineMovieBooking/Views/Movie/Details.cshtml
@@ -105,8 +105,8 @@
     <div class="row">
         <div class="column">
     
-
-            <img src= @ViewBag.address />
+            <img src="~/movieinfo/movie1.jpg" />
+            
         </div>
         <div class="column1">
             <h2>@Html.DisplayFor(model => model.Name)</h2>
